src/objects/Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>AccountProvider__c</fullName>
        <label>Fornecedor</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Cor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descrição do Produto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdItem__c</fullName>
        <externalId>true</externalId>
        <label>IdItem</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Linha</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_do_Pedido_ADM_Site__c</fullName>
        <formula>Order__r.Number_of_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número do Pedido ADM Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_do_Pedido_Gemco__c</fullName>
        <formula>OrderGemco__r.IDPedidoGemco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número do Pedido Gemco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderGemco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido Gemco SF</label>
        <referenceTo>Order_Gemco__c</referenceTo>
        <relationshipLabel>Itens Pedidos</relationshipLabel>
        <relationshipName>Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pedido Adm Site SF</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Itens Pedidos</relationshipLabel>
        <relationshipName>Itens_Pedidos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantidade</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setor__c</fullName>
        <label>Setor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voltage__c</fullName>
        <label>Voltagem</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item Pedido</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>An_lise_de_fraude_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Análise de fraude Samsung</label>
        <queue>An_lise_de_fraude_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Ativo_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Ativo</label>
        <queue>Atendimento_Samsung_Ativo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung</label>
        <queue>Atendimento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Suporte_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Suporte</label>
        <queue>Atendimento_Samsung_Suporte</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD350_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>CD350 Samsung</label>
        <queue>CD350_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financeiro_Contas_a_Receber_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Financeiro – Contas a Receber Samsung</label>
        <queue>Financeiro_Contas_a_Receber_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Refaturamento_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Refaturamento Samsung</label>
        <queue>Processamento_Refaturamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Samsung</label>
        <queue>Processamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Suporte_Comercial_Samsung_Order_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Suporte Comercial Samsung</label>
        <queue>Suporte_Comercial_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Código do item no Gemco / Site</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>